[gd_scene load_steps=70 format=3 uid="uid://vgmnk2ppdy54"]

[ext_resource type="Script" uid="uid://003008emwrnm" path="res://scripts/player.gd" id="1_gntrk"]
[ext_resource type="Texture2D" uid="uid://cwys50o7bdw2g" path="res://Images/SpritSheet/Skeleton_02_Yellow_Attack1.png" id="2_kyqiw"]
[ext_resource type="Texture2D" uid="uid://q84keh4aibt5" path="res://Images/SpritSheet/Skeleton_02_Yellow_Attack2.png" id="3_nn08x"]
[ext_resource type="Texture2D" uid="uid://brr216phagtoc" path="res://Images/SpritSheet/Skeleton_02_Yellow_Die.png" id="4_52ee3"]
[ext_resource type="Texture2D" uid="uid://csd1sqpfqa32i" path="res://Images/SpritSheet/Skeleton_02_Yellow_Idle.png" id="4_dewec"]
[ext_resource type="Texture2D" uid="uid://c0iixciducrbk" path="res://Images/SpritSheet/Skeleton_02_Yellow_Hurt.png" id="5_52ee3"]
[ext_resource type="Texture2D" uid="uid://dg0t1qkdlrcof" path="res://Images/SpritSheet/Skeleton_02_Yellow_Walk.png" id="6_bhhdu"]

[sub_resource type="AtlasTexture" id="AtlasTexture_gntrk"]
atlas = ExtResource("2_kyqiw")
region = Rect2(0, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_dewec"]
atlas = ExtResource("2_kyqiw")
region = Rect2(96, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_5ixxa"]
atlas = ExtResource("2_kyqiw")
region = Rect2(192, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_nn08x"]
atlas = ExtResource("2_kyqiw")
region = Rect2(288, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_52ee3"]
atlas = ExtResource("2_kyqiw")
region = Rect2(384, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_bhhdu"]
atlas = ExtResource("2_kyqiw")
region = Rect2(480, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_megsn"]
atlas = ExtResource("2_kyqiw")
region = Rect2(576, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_yoq75"]
atlas = ExtResource("2_kyqiw")
region = Rect2(672, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ksbbd"]
atlas = ExtResource("2_kyqiw")
region = Rect2(768, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_glx4g"]
atlas = ExtResource("2_kyqiw")
region = Rect2(864, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_miouo"]
atlas = ExtResource("2_kyqiw")
region = Rect2(960, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_x63xi"]
atlas = ExtResource("3_nn08x")
region = Rect2(0, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_i2e8t"]
atlas = ExtResource("3_nn08x")
region = Rect2(96, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_qidb7"]
atlas = ExtResource("3_nn08x")
region = Rect2(192, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_70hv0"]
atlas = ExtResource("3_nn08x")
region = Rect2(288, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_8flut"]
atlas = ExtResource("3_nn08x")
region = Rect2(384, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_u7x0b"]
atlas = ExtResource("3_nn08x")
region = Rect2(480, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_utwlt"]
atlas = ExtResource("3_nn08x")
region = Rect2(576, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_kih0c"]
atlas = ExtResource("3_nn08x")
region = Rect2(672, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_lyrkg"]
atlas = ExtResource("3_nn08x")
region = Rect2(768, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_c43xd"]
atlas = ExtResource("3_nn08x")
region = Rect2(864, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_avx33"]
atlas = ExtResource("3_nn08x")
region = Rect2(960, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_rxg2u"]
atlas = ExtResource("4_52ee3")
region = Rect2(0, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_xixlo"]
atlas = ExtResource("4_52ee3")
region = Rect2(96, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_bfbt0"]
atlas = ExtResource("4_52ee3")
region = Rect2(192, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_wosd6"]
atlas = ExtResource("4_52ee3")
region = Rect2(288, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_hkrn1"]
atlas = ExtResource("4_52ee3")
region = Rect2(384, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_wpo1r"]
atlas = ExtResource("4_52ee3")
region = Rect2(480, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_pqity"]
atlas = ExtResource("4_52ee3")
region = Rect2(576, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_opqna"]
atlas = ExtResource("4_52ee3")
region = Rect2(672, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_00okb"]
atlas = ExtResource("4_52ee3")
region = Rect2(768, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_6hr71"]
atlas = ExtResource("4_52ee3")
region = Rect2(864, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_y6y60"]
atlas = ExtResource("4_52ee3")
region = Rect2(960, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_vmcrb"]
atlas = ExtResource("4_52ee3")
region = Rect2(1056, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_teras"]
atlas = ExtResource("4_52ee3")
region = Rect2(1152, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_fayk8"]
atlas = ExtResource("5_52ee3")
region = Rect2(0, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ddly5"]
atlas = ExtResource("5_52ee3")
region = Rect2(96, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_omi2y"]
atlas = ExtResource("5_52ee3")
region = Rect2(192, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_75iyv"]
atlas = ExtResource("5_52ee3")
region = Rect2(288, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_yrofn"]
atlas = ExtResource("5_52ee3")
region = Rect2(384, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_o3h8g"]
atlas = ExtResource("4_dewec")
region = Rect2(0, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_1e7my"]
atlas = ExtResource("4_dewec")
region = Rect2(96, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_arntx"]
atlas = ExtResource("4_dewec")
region = Rect2(192, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_lslt6"]
atlas = ExtResource("4_dewec")
region = Rect2(288, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ulo2v"]
atlas = ExtResource("4_dewec")
region = Rect2(384, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_1iu4k"]
atlas = ExtResource("4_dewec")
region = Rect2(480, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_m0x7a"]
atlas = ExtResource("4_dewec")
region = Rect2(576, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_5v66d"]
atlas = ExtResource("4_dewec")
region = Rect2(672, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_8p516"]
atlas = ExtResource("6_bhhdu")
region = Rect2(0, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_fvoow"]
atlas = ExtResource("6_bhhdu")
region = Rect2(96, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_v5fqo"]
atlas = ExtResource("6_bhhdu")
region = Rect2(192, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_yf17c"]
atlas = ExtResource("6_bhhdu")
region = Rect2(288, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_awd2i"]
atlas = ExtResource("6_bhhdu")
region = Rect2(384, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_o2sks"]
atlas = ExtResource("6_bhhdu")
region = Rect2(480, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_3rw25"]
atlas = ExtResource("6_bhhdu")
region = Rect2(576, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_u4y2r"]
atlas = ExtResource("6_bhhdu")
region = Rect2(672, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_tbv6f"]
atlas = ExtResource("6_bhhdu")
region = Rect2(768, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_vp15a"]
atlas = ExtResource("6_bhhdu")
region = Rect2(864, 0, 96, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_rpqav"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_gntrk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dewec")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5ixxa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nn08x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_52ee3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bhhdu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_megsn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yoq75")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ksbbd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_glx4g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_miouo")
}],
"loop": false,
"name": &"player_attack",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_x63xi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i2e8t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qidb7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_70hv0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8flut")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u7x0b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_utwlt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kih0c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lyrkg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c43xd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_avx33")
}],
"loop": false,
"name": &"player_attack2",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rxg2u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xixlo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bfbt0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wosd6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hkrn1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wpo1r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pqity")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_opqna")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_00okb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6hr71")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y6y60")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vmcrb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_teras")
}],
"loop": false,
"name": &"player_death",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fayk8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ddly5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_omi2y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_75iyv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yrofn")
}],
"loop": false,
"name": &"player_hurt",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_o3h8g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1e7my")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_arntx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lslt6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ulo2v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1iu4k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m0x7a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5v66d")
}],
"loop": true,
"name": &"player_idle",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8p516")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fvoow")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v5fqo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yf17c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_awd2i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o2sks")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3rw25")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u4y2r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tbv6f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vp15a")
}],
"loop": true,
"name": &"player_walk",
"speed": 10.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_nn08x"]
radius = 33.0
height = 92.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gntrk"]
size = Vector2(60.7623, 13.1094)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dewec"]
size = Vector2(59, 95.75)

[node name="Player" type="CharacterBody2D"]
script = ExtResource("1_gntrk")

[node name="Sprite2D2" type="AnimatedSprite2D" parent="."]
texture_filter = 1
position = Vector2(1.99999, -47)
scale = Vector2(2.03844, 2.04483)
sprite_frames = SubResource("SpriteFrames_rpqav")
animation = &"player_death"
offset = Vector2(5, 0)

[node name="CollisionShape2D2" type="CollisionShape2D" parent="."]
position = Vector2(7, -28)
shape = SubResource("CapsuleShape2D_nn08x")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(0, -83)

[node name="OuchBox" type="Area2D" parent="."]
priority = 10

[node name="CollisionShape2D" type="CollisionShape2D" parent="OuchBox"]
position = Vector2(7.00002, -28)
rotation = 3.14159
scale = Vector2(1.2014, -7.323)
shape = SubResource("RectangleShape2D_gntrk")

[node name="PlayerHitBox" type="Area2D" parent="."]
collision_layer = 15
priority = 10

[node name="PlayerCollisionBox" type="CollisionShape2D" parent="PlayerHitBox"]
position = Vector2(57.5, -27.875)
shape = SubResource("RectangleShape2D_dewec")
disabled = true

[connection signal="area_entered" from="OuchBox" to="." method="_on_ouch_box_area_entered"]
[connection signal="area_entered" from="OuchBox" to="." method="_on_area_2d_area_entered"]
[connection signal="body_entered" from="OuchBox" to="." method="_on_area_2d_body_entered"]
[connection signal="area_entered" from="PlayerHitBox" to="." method="_on_area_2d_area_entered"]
[connection signal="body_entered" from="PlayerHitBox" to="." method="_on_area_2d_body_entered"]
